--- a/kotlin/Ch12.md
+++ b/kotlin/Ch12.md
@@ -1,1 +1,40 @@
 As far as I able to understand the object class It just to make a bundle of the properties of the so if we want to bundle up some values then we use object.
+
+```kotlin
+class Scientist private constructor(
+	val id:Int,
+    val firstName:String,
+    val lastname:String
+){
+    companion object{
+        var currentId = 0
+        
+        fun newScientist(
+        	firstName:String,
+            lastname:String
+        ):Scientist{
+            currentId+=1
+            return Scientist(currentId,firstName,lastName)
+        }
+    }
+    
+    var fullName = "$firstName $lastName"
+}
+
+object ScientistRepository {
+	val allScientists = mutableListOf<Scientist>()
+
+    fun addScientist(scientist: Scientist) {
+		allScientists.add(scientist)
+	}
+	fun removeScientist(scientist: Scientist) {
+		allScientists.remove(scientist)
+	}
+	fun listAllScientists() {
+		allScientists.forEach {
+			println("${it.id}: ${it.fullName}")
+		}
+	}
+}
+
+```
